--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -949,6 +949,313 @@ for循环中处理的就是图中的1, 2, 4.
 
 将剩余部分地址裁剪出来, 其实还有一部分FlatRange可能要生成新的FlatRange(end到remin)
 
+如果是alias还要展开自己，这个说法是不对的。事实上，alias mr和它指向的mr的“gpa”(base+addr)并不一定一致，如果都展开，映射就重复了。
+
+下面是info mtree 打印出来的虚拟机address-space及 memory-region(被alias mr指向的mr)
+
+```
+address-space: memory
+  0000000000000000-ffffffffffffffff (prio 0, RW): system
+    0000000000000000-00000000bfffffff (prio 0, RW): alias ram-below-4g @pc.ram 0000000000000000-00000000bfffffff
+    0000000000000000-ffffffffffffffff (prio -1, RW): pci
+      00000000000a0000-00000000000bffff (prio 1, RW): cirrus-lowmem-container
+        00000000000a0000-00000000000a7fff (prio 1, RW): alias vga.bank0 @vga.vram 0000000000000000-0000000000007fff
+        00000000000a0000-00000000000bffff (prio 0, RW): cirrus-low-memory
+        00000000000a8000-00000000000affff (prio 1, RW): alias vga.bank1 @vga.vram 0000000000008000-000000000000ffff
+      00000000000c0000-00000000000dffff (prio 1, RW): pc.rom
+      00000000000e0000-00000000000fffff (prio 1, R-): alias isa-bios @pc.bios 0000000000020000-000000000003ffff
+      00000000fc000000-00000000fdffffff (prio 1, RW): cirrus-pci-bar0
+        00000000fc000000-00000000fc7fffff (prio 1, RW): vga.vram
+        00000000fc000000-00000000fc7fffff (prio 0, RW): cirrus-linear-io
+        00000000fd000000-00000000fd3fffff (prio 0, RW): cirrus-bitblt-mmio
+      00000000febf0000-00000000febf0fff (prio 1, RW): cirrus-mmio
+      00000000febf1000-00000000febf1fff (prio 1, RW): virtio-scsi-pci-msix
+        00000000febf1000-00000000febf103f (prio 0, RW): msix-table
+        00000000febf1800-00000000febf1807 (prio 0, RW): msix-pba
+      00000000febf2000-00000000febf2fff (prio 1, RW): virtio-serial-pci-msix
+        00000000febf2000-00000000febf201f (prio 0, RW): msix-table
+        00000000febf2800-00000000febf2807 (prio 0, RW): msix-pba
+      00000000fffc0000-00000000ffffffff (prio 0, R-): pc.bios
+    00000000000a0000-00000000000bffff (prio 1, RW): alias smram-region @pci 00000000000a0000-00000000000bffff
+    00000000000c0000-00000000000c3fff (prio 1, RW): alias pam-ram @pc.ram 00000000000c0000-00000000000c3fff [disabled]
+    00000000000c0000-00000000000c3fff (prio 1, RW): alias pam-pci @pc.ram 00000000000c0000-00000000000c3fff [disabled]
+    00000000000c0000-00000000000c3fff (prio 1, R-): alias pam-rom @pc.ram 00000000000c0000-00000000000c3fff
+    00000000000c0000-00000000000c3fff (prio 1, RW): alias pam-pci @pci 00000000000c0000-00000000000c3fff [disabled]
+    00000000000c4000-00000000000c7fff (prio 1, RW): alias pam-ram @pc.ram 00000000000c4000-00000000000c7fff [disabled]
+    00000000000c4000-00000000000c7fff (prio 1, RW): alias pam-pci @pc.ram 00000000000c4000-00000000000c7fff [disabled]
+    00000000000c4000-00000000000c7fff (prio 1, R-): alias pam-rom @pc.ram 00000000000c4000-00000000000c7fff
+    00000000000c4000-00000000000c7fff (prio 1, RW): alias pam-pci @pci 00000000000c4000-00000000000c7fff [disabled]
+    00000000000c8000-00000000000cbfff (prio 1, RW): alias pam-ram @pc.ram 00000000000c8000-00000000000cbfff [disabled]
+    00000000000c8000-00000000000cbfff (prio 1, RW): alias pam-pci @pc.ram 00000000000c8000-00000000000cbfff [disabled]
+    00000000000c8000-00000000000cbfff (prio 1, R-): alias pam-rom @pc.ram 00000000000c8000-00000000000cbfff
+    00000000000c8000-00000000000cbfff (prio 1, RW): alias pam-pci @pci 00000000000c8000-00000000000cbfff [disabled]
+    00000000000c9000-00000000000cbfff (prio 1000, RW): alias kvmvapic-rom @pc.ram 00000000000c9000-00000000000cbfff
+    00000000000cc000-00000000000cffff (prio 1, RW): alias pam-ram @pc.ram 00000000000cc000-00000000000cffff [disabled]
+    00000000000cc000-00000000000cffff (prio 1, RW): alias pam-pci @pc.ram 00000000000cc000-00000000000cffff [disabled]
+    00000000000cc000-00000000000cffff (prio 1, R-): alias pam-rom @pc.ram 00000000000cc000-00000000000cffff
+    00000000000cc000-00000000000cffff (prio 1, RW): alias pam-pci @pci 00000000000cc000-00000000000cffff [disabled]
+    00000000000d0000-00000000000d3fff (prio 1, RW): alias pam-ram @pc.ram 00000000000d0000-00000000000d3fff [disabled]
+    00000000000d0000-00000000000d3fff (prio 1, RW): alias pam-pci @pc.ram 00000000000d0000-00000000000d3fff [disabled]
+    00000000000d0000-00000000000d3fff (prio 1, R-): alias pam-rom @pc.ram 00000000000d0000-00000000000d3fff
+    00000000000d0000-00000000000d3fff (prio 1, RW): alias pam-pci @pci 00000000000d0000-00000000000d3fff [disabled]
+    00000000000d4000-00000000000d7fff (prio 1, RW): alias pam-ram @pc.ram 00000000000d4000-00000000000d7fff [disabled]
+    00000000000d4000-00000000000d7fff (prio 1, RW): alias pam-pci @pc.ram 00000000000d4000-00000000000d7fff [disabled]
+    00000000000d4000-00000000000d7fff (prio 1, R-): alias pam-rom @pc.ram 00000000000d4000-00000000000d7fff
+    00000000000d4000-00000000000d7fff (prio 1, RW): alias pam-pci @pci 00000000000d4000-00000000000d7fff [disabled]
+    00000000000d8000-00000000000dbfff (prio 1, RW): alias pam-ram @pc.ram 00000000000d8000-00000000000dbfff [disabled]
+    00000000000d8000-00000000000dbfff (prio 1, RW): alias pam-pci @pc.ram 00000000000d8000-00000000000dbfff [disabled]
+    00000000000d8000-00000000000dbfff (prio 1, R-): alias pam-rom @pc.ram 00000000000d8000-00000000000dbfff
+    00000000000d8000-00000000000dbfff (prio 1, RW): alias pam-pci @pci 00000000000d8000-00000000000dbfff [disabled]
+    00000000000dc000-00000000000dffff (prio 1, RW): alias pam-ram @pc.ram 00000000000dc000-00000000000dffff [disabled]
+    00000000000dc000-00000000000dffff (prio 1, RW): alias pam-pci @pc.ram 00000000000dc000-00000000000dffff [disabled]
+    00000000000dc000-00000000000dffff (prio 1, R-): alias pam-rom @pc.ram 00000000000dc000-00000000000dffff
+    00000000000dc000-00000000000dffff (prio 1, RW): alias pam-pci @pci 00000000000dc000-00000000000dffff [disabled]
+    00000000000e0000-00000000000e3fff (prio 1, RW): alias pam-ram @pc.ram 00000000000e0000-00000000000e3fff [disabled]
+    00000000000e0000-00000000000e3fff (prio 1, RW): alias pam-pci @pc.ram 00000000000e0000-00000000000e3fff [disabled]
+    00000000000e0000-00000000000e3fff (prio 1, R-): alias pam-rom @pc.ram 00000000000e0000-00000000000e3fff
+    00000000000e0000-00000000000e3fff (prio 1, RW): alias pam-pci @pci 00000000000e0000-00000000000e3fff [disabled]
+    00000000000e4000-00000000000e7fff (prio 1, RW): alias pam-ram @pc.ram 00000000000e4000-00000000000e7fff [disabled]
+    00000000000e4000-00000000000e7fff (prio 1, RW): alias pam-pci @pc.ram 00000000000e4000-00000000000e7fff [disabled]
+    00000000000e4000-00000000000e7fff (prio 1, R-): alias pam-rom @pc.ram 00000000000e4000-00000000000e7fff
+    00000000000e4000-00000000000e7fff (prio 1, RW): alias pam-pci @pci 00000000000e4000-00000000000e7fff [disabled]
+    00000000000e8000-00000000000ebfff (prio 1, RW): alias pam-ram @pc.ram 00000000000e8000-00000000000ebfff [disabled]
+    00000000000e8000-00000000000ebfff (prio 1, RW): alias pam-pci @pc.ram 00000000000e8000-00000000000ebfff [disabled]
+    00000000000e8000-00000000000ebfff (prio 1, R-): alias pam-rom @pc.ram 00000000000e8000-00000000000ebfff
+    00000000000e8000-00000000000ebfff (prio 1, RW): alias pam-pci @pci 00000000000e8000-00000000000ebfff [disabled]
+    00000000000ec000-00000000000effff (prio 1, RW): alias pam-ram @pc.ram 00000000000ec000-00000000000effff
+    00000000000ec000-00000000000effff (prio 1, RW): alias pam-pci @pc.ram 00000000000ec000-00000000000effff [disabled]
+    00000000000ec000-00000000000effff (prio 1, R-): alias pam-rom @pc.ram 00000000000ec000-00000000000effff [disabled]
+    00000000000ec000-00000000000effff (prio 1, RW): alias pam-pci @pci 00000000000ec000-00000000000effff [disabled]
+    00000000000f0000-00000000000fffff (prio 1, RW): alias pam-ram @pc.ram 00000000000f0000-00000000000fffff [disabled]
+    00000000000f0000-00000000000fffff (prio 1, RW): alias pam-pci @pc.ram 00000000000f0000-00000000000fffff [disabled]
+    00000000000f0000-00000000000fffff (prio 1, R-): alias pam-rom @pc.ram 00000000000f0000-00000000000fffff
+    00000000000f0000-00000000000fffff (prio 1, RW): alias pam-pci @pci 00000000000f0000-00000000000fffff [disabled]
+    00000000fec00000-00000000fec00fff (prio 0, RW): kvm-ioapic
+    00000000fee00000-00000000feefffff (prio 4096, RW): kvm-apic-msi
+    0000000100000000-000000013fffffff (prio 0, RW): alias ram-above-4g @pc.ram 00000000c0000000-00000000ffffffff
+
+address-space: I/O
+  0000000000000000-000000000000ffff (prio 0, RW): io
+    0000000000000000-0000000000000007 (prio 0, RW): dma-chan
+    0000000000000008-000000000000000f (prio 0, RW): dma-cont
+    0000000000000020-0000000000000021 (prio 0, RW): kvm-pic
+    0000000000000040-0000000000000043 (prio 0, RW): kvm-pit
+    0000000000000060-0000000000000060 (prio 0, RW): i8042-data
+    0000000000000061-0000000000000061 (prio 0, RW): pcspk
+    0000000000000064-0000000000000064 (prio 0, RW): i8042-cmd
+    0000000000000070-0000000000000071 (prio 0, RW): rtc
+    000000000000007e-000000000000007f (prio 0, RW): kvmvapic
+    0000000000000080-0000000000000080 (prio 0, RW): ioport80
+    0000000000000081-0000000000000083 (prio 0, RW): dma-page
+    0000000000000087-0000000000000087 (prio 0, RW): dma-page
+    0000000000000089-000000000000008b (prio 0, RW): dma-page
+    000000000000008f-000000000000008f (prio 0, RW): dma-page
+    0000000000000092-0000000000000092 (prio 0, RW): port92
+    00000000000000a0-00000000000000a1 (prio 0, RW): kvm-pic
+    00000000000000b2-00000000000000b3 (prio 0, RW): apm-io
+    00000000000000c0-00000000000000cf (prio 0, RW): dma-chan
+    00000000000000d0-00000000000000df (prio 0, RW): dma-cont
+    00000000000000f0-00000000000000f0 (prio 0, RW): ioportF0
+    0000000000000170-0000000000000177 (prio 0, RW): ide
+    00000000000001f0-00000000000001f7 (prio 0, RW): ide
+    0000000000000376-0000000000000376 (prio 0, RW): ide
+    00000000000003b0-00000000000003df (prio 0, RW): cirrus-io
+    00000000000003f1-00000000000003f5 (prio 0, RW): fdc
+    00000000000003f6-00000000000003f6 (prio 0, RW): ide
+    00000000000003f7-00000000000003f7 (prio 0, RW): fdc
+    00000000000003f8-00000000000003ff (prio 0, RW): serial
+    00000000000004d0-00000000000004d0 (prio 0, RW): kvm-elcr
+    00000000000004d1-00000000000004d1 (prio 0, RW): kvm-elcr
+    0000000000000510-0000000000000511 (prio 0, RW): fwcfg
+    0000000000000514-000000000000051b (prio 0, RW): fwcfg.dma
+    0000000000000600-000000000000063f (prio 0, RW): piix4-pm
+      0000000000000600-0000000000000603 (prio 0, RW): acpi-evt
+      0000000000000604-0000000000000605 (prio 0, RW): acpi-cnt
+      0000000000000608-000000000000060b (prio 0, RW): acpi-tmr
+    0000000000000700-000000000000073f (prio 0, RW): pm-smbus
+    0000000000000cf8-0000000000000cfb (prio 0, RW): pci-conf-idx
+    0000000000000cf9-0000000000000cf9 (prio 1, RW): piix3-reset-control
+    0000000000000cfc-0000000000000cff (prio 0, RW): pci-conf-data
+    0000000000005658-0000000000005658 (prio 0, RW): vmport
+    000000000000ae00-000000000000ae13 (prio 0, RW): acpi-pci-hotplug
+    000000000000af00-000000000000af1f (prio 0, RW): acpi-cpu-hotplug
+    000000000000afe0-000000000000afe3 (prio 0, RW): acpi-gpe0
+    000000000000c000-000000000000c0ff (prio 1, RW): pv_channel
+    000000000000c100-000000000000c13f (prio 1, RW): virtio-pci
+    000000000000c140-000000000000c15f (prio 1, RW): uhci
+    000000000000c160-000000000000c17f (prio 1, RW): virtio-pci
+    000000000000c180-000000000000c19f (prio 1, RW): virtio-pci
+    000000000000c1a0-000000000000c1af (prio 1, RW): piix-bmdma-container
+      000000000000c1a0-000000000000c1a3 (prio 0, RW): piix-bmdma
+      000000000000c1a4-000000000000c1a7 (prio 0, RW): bmdma
+      000000000000c1a8-000000000000c1ab (prio 0, RW): piix-bmdma
+      000000000000c1ac-000000000000c1af (prio 0, RW): bmdma
+
+address-space: i440FX
+  0000000000000000-ffffffffffffffff (prio 0, RW): alias bus master @system 0000000000000000-ffffffffffffffff [disabled]
+
+address-space: PIIX3
+  0000000000000000-ffffffffffffffff (prio 0, RW): alias bus master @system 0000000000000000-ffffffffffffffff [disabled]
+
+address-space: piix3-ide
+  0000000000000000-ffffffffffffffff (prio 0, RW): alias bus master @system 0000000000000000-ffffffffffffffff
+
+address-space: PIIX4_PM
+  0000000000000000-ffffffffffffffff (prio 0, RW): alias bus master @system 0000000000000000-ffffffffffffffff [disabled]
+
+address-space: piix3-usb-uhci
+  0000000000000000-ffffffffffffffff (prio 0, RW): alias bus master @system 0000000000000000-ffffffffffffffff
+
+address-space: virtio-scsi-pci
+  0000000000000000-ffffffffffffffff (prio 0, RW): alias bus master @system 0000000000000000-ffffffffffffffff
+
+address-space: virtio-pci-cfg-as
+  0000000000000000-00000000007fffff (prio 0, RW): alias virtio-pci-cfg @virtio-pci 0000000000000000-00000000007fffff
+
+address-space: virtio-serial-pci
+  0000000000000000-ffffffffffffffff (prio 0, RW): alias bus master @system 0000000000000000-ffffffffffffffff
+
+address-space: virtio-pci-cfg-as
+  0000000000000000-00000000007fffff (prio 0, RW): alias virtio-pci-cfg @virtio-pci 0000000000000000-00000000007fffff
+
+address-space: cirrus-vga
+  0000000000000000-ffffffffffffffff (prio 0, RW): alias bus master @system 0000000000000000-ffffffffffffffff [disabled]
+
+address-space: virtio-balloon-pci
+  0000000000000000-ffffffffffffffff (prio 0, RW): alias bus master @system 0000000000000000-ffffffffffffffff
+
+address-space: virtio-pci-cfg-as
+  0000000000000000-00000000007fffff (prio 0, RW): alias virtio-pci-cfg @virtio-pci 0000000000000000-00000000007fffff
+
+address-space: pv_channel
+  0000000000000000-ffffffffffffffff (prio 0, RW): alias bus master @system 0000000000000000-ffffffffffffffff [disabled]
+
+address-space: KVM-SMRAM
+  0000000000000000-ffffffffffffffff (prio 0, RW): mem-container-smram
+    0000000000000000-00000000ffffffff (prio 10, RW): smram
+      00000000000a0000-00000000000bffff (prio 0, RW): alias smram-low @pc.ram 00000000000a0000-00000000000bffff
+    0000000000000000-ffffffffffffffff (prio 0, RW): alias mem-smram @system 0000000000000000-ffffffffffffffff
+
+memory-region: pc.ram
+  0000000000000000-00000000ffffffff (prio 0, RW): pc.ram
+
+memory-region: vga.vram
+  0000000000000000-00000000007fffff (prio 1, RW): vga.vram
+
+memory-region: pc.bios
+  00000000fffc0000-00000000ffffffff (prio 0, R-): pc.bios
+
+memory-region: pci
+  0000000000000000-ffffffffffffffff (prio -1, RW): pci
+    00000000000a0000-00000000000bffff (prio 1, RW): cirrus-lowmem-container
+      00000000000a0000-00000000000a7fff (prio 1, RW): alias vga.bank0 @vga.vram 0000000000000000-0000000000007fff
+      00000000000a0000-00000000000bffff (prio 0, RW): cirrus-low-memory
+      00000000000a8000-00000000000affff (prio 1, RW): alias vga.bank1 @vga.vram 0000000000008000-000000000000ffff
+    00000000000c0000-00000000000dffff (prio 1, RW): pc.rom
+    00000000000e0000-00000000000fffff (prio 1, R-): alias isa-bios @pc.bios 0000000000020000-000000000003ffff
+    00000000fc000000-00000000fdffffff (prio 1, RW): cirrus-pci-bar0
+      00000000fc000000-00000000fc7fffff (prio 1, RW): vga.vram
+      00000000fc000000-00000000fc7fffff (prio 0, RW): cirrus-linear-io
+      00000000fd000000-00000000fd3fffff (prio 0, RW): cirrus-bitblt-mmio
+    00000000febf0000-00000000febf0fff (prio 1, RW): cirrus-mmio
+    00000000febf1000-00000000febf1fff (prio 1, RW): virtio-scsi-pci-msix
+      00000000febf1000-00000000febf103f (prio 0, RW): msix-table
+      00000000febf1800-00000000febf1807 (prio 0, RW): msix-pba
+    00000000febf2000-00000000febf2fff (prio 1, RW): virtio-serial-pci-msix
+      00000000febf2000-00000000febf201f (prio 0, RW): msix-table
+      00000000febf2800-00000000febf2807 (prio 0, RW): msix-pba
+    00000000fffc0000-00000000ffffffff (prio 0, R-): pc.bios
+
+memory-region: system
+  0000000000000000-ffffffffffffffff (prio 0, RW): system
+    0000000000000000-00000000bfffffff (prio 0, RW): alias ram-below-4g @pc.ram 0000000000000000-00000000bfffffff
+    0000000000000000-ffffffffffffffff (prio -1, RW): pci
+      00000000000a0000-00000000000bffff (prio 1, RW): cirrus-lowmem-container
+        00000000000a0000-00000000000a7fff (prio 1, RW): alias vga.bank0 @vga.vram 0000000000000000-0000000000007fff
+        00000000000a0000-00000000000bffff (prio 0, RW): cirrus-low-memory
+        00000000000a8000-00000000000affff (prio 1, RW): alias vga.bank1 @vga.vram 0000000000008000-000000000000ffff
+      00000000000c0000-00000000000dffff (prio 1, RW): pc.rom
+      00000000000e0000-00000000000fffff (prio 1, R-): alias isa-bios @pc.bios 0000000000020000-000000000003ffff
+      00000000fc000000-00000000fdffffff (prio 1, RW): cirrus-pci-bar0
+        00000000fc000000-00000000fc7fffff (prio 1, RW): vga.vram
+        00000000fc000000-00000000fc7fffff (prio 0, RW): cirrus-linear-io
+        00000000fd000000-00000000fd3fffff (prio 0, RW): cirrus-bitblt-mmio
+      00000000febf0000-00000000febf0fff (prio 1, RW): cirrus-mmio
+      00000000febf1000-00000000febf1fff (prio 1, RW): virtio-scsi-pci-msix
+        00000000febf1000-00000000febf103f (prio 0, RW): msix-table
+        00000000febf1800-00000000febf1807 (prio 0, RW): msix-pba
+      00000000febf2000-00000000febf2fff (prio 1, RW): virtio-serial-pci-msix
+        00000000febf2000-00000000febf201f (prio 0, RW): msix-table
+        00000000febf2800-00000000febf2807 (prio 0, RW): msix-pba
+      00000000fffc0000-00000000ffffffff (prio 0, R-): pc.bios
+    00000000000a0000-00000000000bffff (prio 1, RW): alias smram-region @pci 00000000000a0000-00000000000bffff
+    00000000000c0000-00000000000c3fff (prio 1, RW): alias pam-ram @pc.ram 00000000000c0000-00000000000c3fff [disabled]
+    00000000000c0000-00000000000c3fff (prio 1, RW): alias pam-pci @pc.ram 00000000000c0000-00000000000c3fff [disabled]
+    00000000000c0000-00000000000c3fff (prio 1, R-): alias pam-rom @pc.ram 00000000000c0000-00000000000c3fff
+    00000000000c0000-00000000000c3fff (prio 1, RW): alias pam-pci @pci 00000000000c0000-00000000000c3fff [disabled]
+    00000000000c4000-00000000000c7fff (prio 1, RW): alias pam-ram @pc.ram 00000000000c4000-00000000000c7fff [disabled]
+    00000000000c4000-00000000000c7fff (prio 1, RW): alias pam-pci @pc.ram 00000000000c4000-00000000000c7fff [disabled]
+    00000000000c4000-00000000000c7fff (prio 1, R-): alias pam-rom @pc.ram 00000000000c4000-00000000000c7fff
+    00000000000c4000-00000000000c7fff (prio 1, RW): alias pam-pci @pci 00000000000c4000-00000000000c7fff [disabled]
+    00000000000c8000-00000000000cbfff (prio 1, RW): alias pam-ram @pc.ram 00000000000c8000-00000000000cbfff [disabled]
+    00000000000c8000-00000000000cbfff (prio 1, RW): alias pam-pci @pc.ram 00000000000c8000-00000000000cbfff [disabled]
+    00000000000c8000-00000000000cbfff (prio 1, R-): alias pam-rom @pc.ram 00000000000c8000-00000000000cbfff
+    00000000000c8000-00000000000cbfff (prio 1, RW): alias pam-pci @pci 00000000000c8000-00000000000cbfff [disabled]
+    00000000000c9000-00000000000cbfff (prio 1000, RW): alias kvmvapic-rom @pc.ram 00000000000c9000-00000000000cbfff
+    00000000000cc000-00000000000cffff (prio 1, RW): alias pam-ram @pc.ram 00000000000cc000-00000000000cffff [disabled]
+    00000000000cc000-00000000000cffff (prio 1, RW): alias pam-pci @pc.ram 00000000000cc000-00000000000cffff [disabled]
+    00000000000cc000-00000000000cffff (prio 1, R-): alias pam-rom @pc.ram 00000000000cc000-00000000000cffff
+    00000000000cc000-00000000000cffff (prio 1, RW): alias pam-pci @pci 00000000000cc000-00000000000cffff [disabled]
+    00000000000d0000-00000000000d3fff (prio 1, RW): alias pam-ram @pc.ram 00000000000d0000-00000000000d3fff [disabled]
+    00000000000d0000-00000000000d3fff (prio 1, RW): alias pam-pci @pc.ram 00000000000d0000-00000000000d3fff [disabled]
+    00000000000d0000-00000000000d3fff (prio 1, R-): alias pam-rom @pc.ram 00000000000d0000-00000000000d3fff
+    00000000000d0000-00000000000d3fff (prio 1, RW): alias pam-pci @pci 00000000000d0000-00000000000d3fff [disabled]
+    00000000000d4000-00000000000d7fff (prio 1, RW): alias pam-ram @pc.ram 00000000000d4000-00000000000d7fff [disabled]
+    00000000000d4000-00000000000d7fff (prio 1, RW): alias pam-pci @pc.ram 00000000000d4000-00000000000d7fff [disabled]
+    00000000000d4000-00000000000d7fff (prio 1, R-): alias pam-rom @pc.ram 00000000000d4000-00000000000d7fff
+    00000000000d4000-00000000000d7fff (prio 1, RW): alias pam-pci @pci 00000000000d4000-00000000000d7fff [disabled]
+    00000000000d8000-00000000000dbfff (prio 1, RW): alias pam-ram @pc.ram 00000000000d8000-00000000000dbfff [disabled]
+    00000000000d8000-00000000000dbfff (prio 1, RW): alias pam-pci @pc.ram 00000000000d8000-00000000000dbfff [disabled]
+    00000000000d8000-00000000000dbfff (prio 1, R-): alias pam-rom @pc.ram 00000000000d8000-00000000000dbfff
+    00000000000d8000-00000000000dbfff (prio 1, RW): alias pam-pci @pci 00000000000d8000-00000000000dbfff [disabled]
+    00000000000dc000-00000000000dffff (prio 1, RW): alias pam-ram @pc.ram 00000000000dc000-00000000000dffff [disabled]
+    00000000000dc000-00000000000dffff (prio 1, RW): alias pam-pci @pc.ram 00000000000dc000-00000000000dffff [disabled]
+    00000000000dc000-00000000000dffff (prio 1, R-): alias pam-rom @pc.ram 00000000000dc000-00000000000dffff
+    00000000000dc000-00000000000dffff (prio 1, RW): alias pam-pci @pci 00000000000dc000-00000000000dffff [disabled]
+    00000000000e0000-00000000000e3fff (prio 1, RW): alias pam-ram @pc.ram 00000000000e0000-00000000000e3fff [disabled]
+    00000000000e0000-00000000000e3fff (prio 1, RW): alias pam-pci @pc.ram 00000000000e0000-00000000000e3fff [disabled]
+    00000000000e0000-00000000000e3fff (prio 1, R-): alias pam-rom @pc.ram 00000000000e0000-00000000000e3fff
+    00000000000e0000-00000000000e3fff (prio 1, RW): alias pam-pci @pci 00000000000e0000-00000000000e3fff [disabled]
+    00000000000e4000-00000000000e7fff (prio 1, RW): alias pam-ram @pc.ram 00000000000e4000-00000000000e7fff [disabled]
+    00000000000e4000-00000000000e7fff (prio 1, RW): alias pam-pci @pc.ram 00000000000e4000-00000000000e7fff [disabled]
+    00000000000e4000-00000000000e7fff (prio 1, R-): alias pam-rom @pc.ram 00000000000e4000-00000000000e7fff
+    00000000000e4000-00000000000e7fff (prio 1, RW): alias pam-pci @pci 00000000000e4000-00000000000e7fff [disabled]
+    00000000000e8000-00000000000ebfff (prio 1, RW): alias pam-ram @pc.ram 00000000000e8000-00000000000ebfff [disabled]
+    00000000000e8000-00000000000ebfff (prio 1, RW): alias pam-pci @pc.ram 00000000000e8000-00000000000ebfff [disabled]
+    00000000000e8000-00000000000ebfff (prio 1, R-): alias pam-rom @pc.ram 00000000000e8000-00000000000ebfff
+    00000000000e8000-00000000000ebfff (prio 1, RW): alias pam-pci @pci 00000000000e8000-00000000000ebfff [disabled]
+    00000000000ec000-00000000000effff (prio 1, RW): alias pam-ram @pc.ram 00000000000ec000-00000000000effff
+    00000000000ec000-00000000000effff (prio 1, RW): alias pam-pci @pc.ram 00000000000ec000-00000000000effff [disabled]
+    00000000000ec000-00000000000effff (prio 1, R-): alias pam-rom @pc.ram 00000000000ec000-00000000000effff [disabled]
+    00000000000ec000-00000000000effff (prio 1, RW): alias pam-pci @pci 00000000000ec000-00000000000effff [disabled]
+    00000000000f0000-00000000000fffff (prio 1, RW): alias pam-ram @pc.ram 00000000000f0000-00000000000fffff [disabled]
+    00000000000f0000-00000000000fffff (prio 1, RW): alias pam-pci @pc.ram 00000000000f0000-00000000000fffff [disabled]
+    00000000000f0000-00000000000fffff (prio 1, R-): alias pam-rom @pc.ram 00000000000f0000-00000000000fffff
+    00000000000f0000-00000000000fffff (prio 1, RW): alias pam-pci @pci 00000000000f0000-00000000000fffff [disabled]
+    00000000fec00000-00000000fec00fff (prio 0, RW): kvm-ioapic
+    00000000fee00000-00000000feefffff (prio 4096, RW): kvm-apic-msi
+    0000000100000000-000000013fffffff (prio 0, RW): alias ram-above-4g @pc.ram 00000000c0000000-00000000ffffffff
+
+memory-region: virtio-pci
+  0000000000000000-00000000007fffff (prio 0, RW): virtio-pci
+
+memory-region: virtio-pci
+  0000000000000000-00000000007fffff (prio 0, RW): virtio-pci
+
+memory-region: virtio-pci
+  0000000000000000-00000000007fffff (prio 0, RW): virtio-pci
+```
+
 #### 4.3.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM
 
 ```cpp
@@ -1151,7 +1458,11 @@ section_from_flat_range(FlatRange *fr, FlatView *fv)
 
 这里有个`_direction`，其实就是**遍历方向**，因为**listener**按照**优先级**从**低到高**排列，所以这里其实就是确定让谁先处理。Forward就是从前向后，而reverse就是从后向前。还有一个值得注意的是`memory_listener_match`函数，**listener**有着**对应的AddressSpace**，会在其 `address_space_filter` 域指定，注意如果**没有指定AddressSpace**，那么该listener对**所有AddressSpace均适用**，否则**只适用于其指定的AddressSpace**。知道这些，看这些代码就不成问题了。
 
-这样`kvm_region_add()`函数得到执行，那咱们就从`kvm_region_add`函数开始，对KVM部分的内存管理做介绍。`kvm_region_add()`函数是核心listener的添加region的函数，在qemu申请好内存后，针对每个FR，调用了listener的`region_add函数`。最终需要利用此函数把region信息告知KVM，KVM以此对内存信息做记录。咱们直奔主题，函数核心在static void kvm_set_phys_mem(MemoryRegionSection *section, bool add)函数中，
+这样`kvm_region_add()`函数得到执行，那咱们就从`kvm_region_add`函数开始，对KVM部分的内存管理做介绍。
+
+`kvm_region_add()`函数是核心listener的添加region的函数，在qemu申请好内存后，针对**每个FR**，调用了listener的`region_add函数`。最终需要利用此函数把**region信息**告知**KVM**，KVM以此对内存信息做记录。
+
+咱们直奔主题，函数核心在static void kvm_set_phys_mem(MemoryRegionSection *section, bool add)函数中，
 
 该函数比较长，咱们还是分段介绍
 
@@ -1198,12 +1509,14 @@ section_from_flat_range(FlatRange *fr, FlatView *fv)
     }
 ```
 
-第一部分主要是一些基础工作，获取section对应的MR的一些属性，如writeable、readonly_flag。获取section的start_addr和size，其中start_addr就是section中的offset_within_address_space也就是FR中的offset_in_region,接下来对size进行了对齐操作 。如果对应的MR关联的内存并不是作为ram存在，就要进行额外的验证。这种情况如果writeable允许写操作或者kvm不支持只读内存，那么直接返回。
+第一部分主要是一些基础工作，获取**section对应的MR**的一些属性，如writeable、readonly_flag。
+
+获取section的start_addr和size，其中`start_addr`就是section中的`offset_within_address_space`也就是**FR**中的`offset_in_region`,接下来对size进行了对齐操作 。如果对应的MR关联的内存并不是作为ram存在，就要进行额外的验证。这种情况如果writeable允许写操作或者kvm不支持只读内存，那么直接返回。
 
 接下来是函数的重点处理部分，即把当前的section转化成一个slot进行添加，但是在此之前需要处理已存在的slot和新的slot的重叠问题，当然如果没有重叠就好办了，直接添加即可。进入while循环
 
 ```cpp
-ram = memory_region_get_ram_ptr(mr) + section->offset_within_region + delta;
+    ram = memory_region_get_ram_ptr(mr) + section->offset_within_region + delta;
     /*对重叠部分的处理*/
     while (1) {
         /*查找重叠的部分*/
