--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1462,11 +1462,71 @@ section_from_flat_range(FlatRange *fr, FlatView *fv)
 
 `kvm_region_add()`函数是核心listener的添加region的函数，在qemu申请好内存后，针对**每个FR**，调用了listener的`region_add函数`。最终需要利用此函数把**region信息**告知**KVM**，KVM以此对内存信息做记录。
 
-咱们直奔主题，函数核心在static void kvm_set_phys_mem(MemoryRegionSection *section, bool add)函数中，
+咱们直奔主题，函数核心在`static void kvm_set_phys_mem(MemoryRegionSection *section, bool add)`函数中，QEMU通过该函数修改虚拟机注册在内核中的内存, 达到为虚拟机添加/删除/移动内存的目的.
 
 该函数比较长，咱们还是分段介绍
 
 ```cpp
+static void kvm_set_phys_mem(KVMMemoryListener *kml,
+                             MemoryRegionSection *section, bool add)
+{
+    KVMSlot *mem;
+    int err;
+    MemoryRegion *mr = section->mr;
+    // 是否可写
+    bool writeable = !mr->readonly && !mr->rom_device;
+    hwaddr start_addr, size, slot_size;
+    void *ram;
+
+    if (!memory_region_is_ram(mr)) {
+        if (writeable || !kvm_readonly_mem_allowed) {
+            return;
+        } else if (!mr->romd_mode) {
+            /* If the memory device is not in romd_mode, then we actually want
+             * to remove the kvm memory slot so all accesses will trap. */
+            add = false;
+        }
+    }
+    // section
+    size = kvm_align_section(section, &start_addr);
+    if (!size) {
+        return;
+    }
+
+    /* use aligned delta to align the ram address */
+    ram = memory_region_get_ram_ptr(mr) + section->offset_within_region +
+          (start_addr - section->offset_within_address_space);
+
+    kvm_slots_lock(kml);
+
+    if (!add) {
+        do {
+            slot_size = MIN(kvm_max_slot_size, size);
+            mem = kvm_lookup_matching_slot(kml, start_addr, slot_size);
+            if (!mem) {
+                goto out;
+            }
+            if (mem->flags & KVM_MEM_LOG_DIRTY_PAGES) {
+                kvm_physical_sync_dirty_bitmap(kml, section);
+            }
+
+            /* unregister the slot */
+            g_free(mem->dirty_bmap);
+            mem->dirty_bmap = NULL;
+            mem->memory_size = 0;
+            mem->flags = 0;
+            err = kvm_set_user_memory_region(kml, mem, false);
+            if (err) {
+                fprintf(stderr, "%s: error unregistering slot: %s\n",
+                        __func__, strerror(-err));
+                abort();
+            }
+            start_addr += slot_size;
+            size -= slot_size;
+        } while (size);
+        goto out;
+    }
+
     KVMState *s = kvm_state;
     KVMSlot *mem, old;
     int err;
