--- a/Virtualization/QEMU/2. init/2. QEMU初始化.md
+++ b/Virtualization/QEMU/2. init/2. QEMU初始化.md
@@ -108,7 +108,7 @@ int main()
  |   |   |   |       ├─ address_space_update_topology_pass(AddressSpce, FlatView_old, FlatView_new) // 遍历FlatView的所有FlatRange, 也就是得到若干个 MemoryRegionSection, 将其注册到KVM
  |   |   |   |       |   └─ MEMORY_LISTENER_UPDATE_REGION(frnew, as, Forward, region_add)        // 回调函数 region_add, 对应的是kvm_region_add()
  |   |   |   |       |   └─ kvm_region_add()        // region_add 对应的回调实现
- |   |   |   |       |       └─ kvm_set_phys_mem()  // 根据传入的 section 填充 KVMSlot
+ |   |   |   |       |       └─ kvm_set_phys_mem()  // 根据传入的 section 填充 KVMSlot, 修改虚拟机注册在内核中的内存
  |   |   |   |       |           └─ kvm_set_user_memory_region() // 将 QEMU 侧的内存布局注册到 KVM 中
  |   |   |   |       |               └─ kvm_ioctl(KVM_SET_USER_MEMORY_REGION) // 与KVM交互
  |   |   |   |       |
