--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1487,16 +1487,16 @@ static void kvm_set_phys_mem(KVMMemoryListener *kml,
             add = false;
         }
     }
-    // section
+    // 得到section的start address和size
     size = kvm_align_section(section, &start_addr);
     if (!size) {
         return;
     }
-
+    // 获取ram(HVA)地址
     /* use aligned delta to align the ram address */
     ram = memory_region_get_ram_ptr(mr) + section->offset_within_region +
           (start_addr - section->offset_within_address_space);
-
+    // 锁定
     kvm_slots_lock(kml);
 
     if (!add) {
