--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1477,8 +1477,9 @@ static void kvm_set_phys_mem(KVMMemoryListener *kml,
     bool writeable = !mr->readonly && !mr->rom_device;
     hwaddr start_addr, size, slot_size;
     void *ram;
-
+    // 如果不是ram, 则不能写操作
     if (!memory_region_is_ram(mr)) {
+        // 不可写 或 kvm不支持只读内存, 直接返回
         if (writeable || !kvm_readonly_mem_allowed) {
             return;
         } else if (!mr->romd_mode) {
@@ -1487,16 +1488,16 @@ static void kvm_set_phys_mem(KVMMemoryListener *kml,
             add = false;
         }
     }
-    // 得到section的start address和size
+    // 得到section的start address和size, 对齐后的结果
     size = kvm_align_section(section, &start_addr);
     if (!size) {
         return;
     }
-    // 获取ram(HVA)地址
+    // 获取ram(HVA)地址, ??
     /* use aligned delta to align the ram address */
     ram = memory_region_get_ram_ptr(mr) + section->offset_within_region +
           (start_addr - section->offset_within_address_space);
-    // 锁定
+    // 加锁
     kvm_slots_lock(kml);
 
     if (!add) {
@@ -1526,52 +1527,43 @@ static void kvm_set_phys_mem(KVMMemoryListener *kml,
         } while (size);
         goto out;
     }
+    /* register the new slot */
+    do {
+        slot_size = MIN(kvm_max_slot_size, size);
+        mem = kvm_alloc_slot(kml);
+        mem->memory_size = slot_size;
+        mem->start_addr = start_addr;
+        mem->ram = ram;
+        mem->flags = kvm_mem_flags(mr);
 
-    KVMState *s = kvm_state;
-    KVMSlot *mem, old;
-    int err;
-    MemoryRegion *mr = section->mr;
-    bool log_dirty = memory_region_is_logging(mr);
-    /*是否可写*/
-    bool writeable = !mr->readonly && !mr->rom_device;
-    bool readonly_flag = mr->readonly || memory_region_is_romd(mr);
-    //section中数据的起始偏移
-    hwaddr start_addr = section->offset_within_address_space;
-    /*section的size*/
-    ram_addr_t size = int128_get64(section->size);
-    void *ram = NULL;
-    unsigned delta;
-
-    /* kvm works in page size chunks, but the function may be called
-       with sub-page size and unaligned start address. */
-    /*内存对齐后的偏移*/
-    delta = TARGET_PAGE_ALIGN(size) - size;
-    if (delta > size) {
-        return;
-    }
-    
-    start_addr += delta;
-    size -= delta;//这样可以保证size是页对齐的
-    size &= TARGET_PAGE_MASK;
-    
-    if (!size || (start_addr & ~TARGET_PAGE_MASK)) {
-        return;
-    }
-    /*如果不是rom，则不能进行写操作*/
-    if (!memory_region_is_ram(mr)) {
-        if (writeable || !kvm_readonly_mem_allowed) {
-            return;
-        } else if (!mr->romd_mode) {
-            /* If the memory device is not in romd_mode, then we actually want
-             * to remove the kvm memory slot so all accesses will trap. */
-            add = false;
+        if (mem->flags & KVM_MEM_LOG_DIRTY_PAGES) {
+            /*
+             * Reallocate the bmap; it means it doesn't disappear in
+             * middle of a migrate.
+             */
+            kvm_memslot_init_dirty_bitmap(mem);
         }
-    }
+        err = kvm_set_user_memory_region(kml, mem, true);
+        if (err) {
+            fprintf(stderr, "%s: error registering slot: %s\n", __func__,
+                    strerror(-err));
+            abort();
+        }
+        start_addr += slot_size;
+        ram += slot_size;
+        size -= slot_size;
+    } while (size);
+
+out:
+    kvm_slots_unlock(kml);
+}
 ```
 
 第一部分主要是一些基础工作，获取**section对应的MR**的一些属性，如writeable、readonly_flag。
 
-获取section的start_addr和size，其中`start_addr`就是section中的`offset_within_address_space`也就是**FR**中的`offset_in_region`,接下来对size进行了对齐操作 。如果对应的MR关联的内存并不是作为ram存在，就要进行额外的验证。这种情况如果writeable允许写操作或者kvm不支持只读内存，那么直接返回。
+获取section的start_addr和size，其中`start_addr`就是section中的`offset_within_address_space`也就是**FR**中的`offset_in_region`,接下来对size进行了对齐操作 。
+
+如果对应的MR关联的内存并不是作为ram存在，就要进行额外的验证。这种情况如果writeable允许写操作或者kvm不支持只读内存，那么直接返回。
 
 接下来是函数的重点处理部分，即把**当前的section**转化成一个**slot**进行**添加**，但是在此之前需要处理**已存在的slot**和**新的slot**的**重叠问题**，当然如果没有重叠就好办了，直接添加即可。进入while循环
 
