--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
@@ -391,11 +391,19 @@ struct MemoryRegionSection {
     // 所属的 FV
     FlatView *fv;
     // 在 MemoryRegion 中的偏移
+    /*
+     * 相当于在region内偏移量，region上面挂载了一块从HOST上分配的内存，通过这个offset，就可以计算这个section在HOST内存上的HVA了
+     */
     hwaddr offset_within_region;
     // 大小
     Int128 size;
+    /*
+     * AS内偏移量，该值是GPA，相当于从GUEST物理地址0处开始的偏移量，也就是说，这个值是该段内存GPA的起始地址
+     * 这很好理解，如果AS代表的是系统内存，那么AS内的偏移量当然是物理地址
+     */
     // 在 address space 的偏移, 该address space通过FV关联
     hwaddr offset_within_address_space;
+    /*指明是ROM还是RAM*/
     bool readonly;
     bool nonvolatile;
 };
