--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1464,8 +1464,6 @@ section_from_flat_range(FlatRange *fr, FlatView *fv)
 
 咱们直奔主题，函数核心在`static void kvm_set_phys_mem(MemoryRegionSection *section, bool add)`函数中，QEMU通过该函数修改虚拟机注册在内核中的内存, 达到为虚拟机添加/删除/移动内存的目的.
 
-该函数比较长，咱们还是分段介绍
-
 ```cpp
 static void kvm_set_phys_mem(KVMMemoryListener *kml,
                              MemoryRegionSection *section, bool add)
@@ -1527,9 +1525,11 @@ static void kvm_set_phys_mem(KVMMemoryListener *kml,
         } while (size);
         goto out;
     }
+    // 注册新的slot
     /* register the new slot */
     do {
         slot_size = MIN(kvm_max_slot_size, size);
+        // 生成新的slot并初始化
         mem = kvm_alloc_slot(kml);
         mem->memory_size = slot_size;
         mem->start_addr = start_addr;
@@ -1559,13 +1559,40 @@ out:
 }
 ```
 
-第一部分主要是一些基础工作，获取**section对应的MR**的一些属性，如writeable、readonly_flag。
+主要是一些基础工作，获取**section对应的MR**的一些属性，如writeable、readonly_flag。
 
 获取section的start_addr和size，其中`start_addr`就是section中的`offset_within_address_space`也就是**FR**中的`offset_in_region`,接下来对size进行了对齐操作 。
 
 如果对应的MR关联的内存并不是作为ram存在，就要进行额外的验证。这种情况如果writeable允许写操作或者kvm不支持只读内存，那么直接返回。
 
 接下来是函数的重点处理部分，即把**当前的section**转化成一个**slot**进行**添加**，但是在此之前需要处理**已存在的slot**和**新的slot**的**重叠问题**，当然如果没有重叠就好办了，直接添加即可。进入while循环
+
+```cpp
+static int kvm_set_user_memory_region(KVMMemoryListener *kml, KVMSlot *slot, bool new)
+{
+    KVMState *s = kvm_state;
+    struct kvm_userspace_memory_region mem;
+    int ret;
+
+    mem.slot = slot->slot | (kml->as_id << 16);
+    mem.guest_phys_addr = slot->start_addr;
+    mem.userspace_addr = (unsigned long)slot->ram;
+    mem.flags = slot->flags;
+
+    if (slot->memory_size && !new && (mem.flags ^ slot->old_flags) & KVM_MEM_READONLY) {
+        /* Set the slot size to 0 before setting the slot to the desired
+         * value. This is needed based on KVM commit 75d61fbc. */
+        mem.memory_size = 0;
+        kvm_vm_ioctl(s, KVM_SET_USER_MEMORY_REGION, &mem);
+    }
+    mem.memory_size = slot->memory_size;
+    ret = kvm_vm_ioctl(s, KVM_SET_USER_MEMORY_REGION, &mem);
+    slot->old_flags = mem.flags;
+    trace_kvm_set_user_memory(mem.slot, mem.flags, mem.guest_phys_addr,
+                              mem.memory_size, mem.userspace_addr, ret);
+    return ret;
+}
+```
 
 ```cpp
     // 
@@ -1985,3 +2012,5 @@ https://blog.csdn.net/Shirleylinyuer/article/details/83592758 (未整理)
 http://abcdxyzk.github.io/blog/2015/07/29/kvm-src2/ (未完)
 
 https://blog.csdn.net/woai110120130/article/details/102311622 (未完)
+
+https://blog.csdn.net/leoufung/article/details/48781185 (未整理)
