--- Auto-Git Commit ---

--- a/Virtualization/QEMU/2. init/2. QEMU初始化.md
+++ b/Virtualization/QEMU/2. init/2. QEMU初始化.md
@@ -110,7 +110,7 @@ int main()
  |   |   |   |       |   └─ kvm_region_add()        // region_add 对应的回调实现
  |   |   |   |       |       └─ kvm_set_phys_mem()  // 根据传入的 section 填充 KVMSlot, 修改虚拟机注册在内核中的内存
  |   |   |   |       |           └─ kvm_set_user_memory_region() // 将 QEMU 侧的内存布局注册到 KVM 中
- |   |   |   |       |               └─ kvm_ioctl(KVM_SET_USER_MEMORY_REGION) // 与KVM交互
+ |   |   |   |       |               └─ kvm_ioctl(KVM_SET_USER_MEMORY_REGION) // 与KVM交互, 但是这时候qemu还没有申请内存
  |   |   |   |       |
  |   |   |   └─ address_space_update_ioeventfds(as)   
  |   |   |
