--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1743,13 +1743,7 @@ static int kvm_set_user_memory_region(KVMState *s, KVMSlot *slot)
 }
 ```
 
-可以看到该函数实现也并不复杂，使用了一个kvm_userspace_memory_region对应，该结构本质上作为参数传递给KVM，只是由于不能共享堆栈，在KVM中需要把该结构复制到内核空间，代码本身没什么难度，只是这里如果是只读的mem, 需要调用两次kvm_vm_ioctl，第一次设置mem的size为0.
-
-至于为何这么做，咱们到分析KVM端的时候在做讨论。
-
- 
-
-KVM接收端在kvm_vm_ioctl()函数中
+可以看到该函数实现也并不复杂，使用了一个`kvm_userspace_memory_region`对应，该结构本质上作为参数传递给KVM，只是由于不能共享堆栈，在KVM中需要把该结构复制到内核空间，代码本身没什么难度，只是这里如果是**只读的mem**, 需要**调用两次**kvm_vm_ioctl，第一次设置mem的size为0. 至于为何这么做，可以参考KVM端说明, KVM接收端在`kvm_vm_ioctl()`函数中.
 
 ```cpp
 ……
@@ -1966,7 +1960,7 @@ if ((change == KVM_MR_CREATE) || (change == KVM_MR_MOVE)) {
 
 接下来确保slots不为空，如果是KVM_MR_CREATE或者KVM_MR_MOVE，就需要重新建立映射，使用kvm_iommu_map_pages函数 ，而如果是KVM_MR_DELETE，就没必要为new设置dirty_bitmap，并对其arch字段的结构清零。最终都要执行操作install_new_memslots，不过当为delete操作时，new的memory size为0，那么看下该函数做了什么。
 
-```
+```cpp
 static struct kvm_memslots *install_new_memslots(struct kvm *kvm,
         struct kvm_memslots *slots, struct kvm_memory_slot *new)
 {
